# order-book

./: .bash_history  .gitignore  Cargo.toml  README.md  parse_criterion_results.py  perf.data.old  report.txt  results-cmp.txt  results.txt  run_benches.sh
.github/workflows/: rust.yml
archive/: old_v3_slot_map.rs
benches/: bench_cancel_orders.rs  bench_lobster_data.rs  bench_naive.rs  bench_place_orders.rs  common.rs  create_charts.rs  perf_benching.rs
benches/results/: .~lock.memory_footprint_cancel_orders_level_scaling.csv#  criterion_results.csv  criterion_results.txt  memory_footprint_alloc.html  memory_footprint_cancel_orders_level_scaling.csv  memory_footprint_grow.html  memory_footprint_place_orders_level_scaling.csv  parse_criterion_results.py  throughput_cancel_orders_level_scaling.csv  throughput_cancel_orders_level_scaling.html  throughput_place_orders_level_scaling.html  throughput_place_orders_persistent_scaling_all_narrow.csv  throughput_place_orders_persistent_scaling_all_narrow.html  throughput_place_orders_persistent_scaling_all_wide.csv  throughput_place_orders_persistent_scaling_all_wide.html
benches/results/csv/: criterion_results.csv  memory_footprint_place_orders_level_scaling.csv  throughput_place_orders_level_scaling.csv  throughput_place_orders_persistent_scaling_all_narrow.csv  throughput_place_orders_persistent_scaling_all_narrow_single_order.csv  throughput_place_orders_persistent_scaling_all_wide_single_order.csv
benches/shared/: bench_engine.rs  bench_helpers.rs  charts.rs  mod.rs  smem_prof.rs
benchmarks/: Cargo.toml
benchmarks/benches/: benchmarks.rs  divan_benchmarks.rs  rand_distr_plots.rs
benchmarks/src/: lib.rs
charts/: P1.html  P2.html  P3.html  P4.html  P5.html  P6.html  P7.html  bench_memory_footprint_full.html  bench_memory_footprint_optimized.html
orderbook/: Cargo.toml
orderbook/benches/: arena_alloc.rs  basic.rs  optimized.rs
shared/: Cargo.toml
shared/archive/: old_v4_slot_map_arena.rs
shared/benches/: bench_naive.rs
shared/src/: arena_naive.rs  arena_optimized.rs  common.rs  lib.rs  ob_arena_naive.rs  ob_arena_optimized.rs  ob_arena_slot_map.rs  ob_naive.rs  ob_slot_map_naive.rs  ob_slot_map_optimized.rs  ob_slot_map_standard.rs  ob_slot_map_unsafe.rs  ob_standard.rs  slot_map_naive.rs  slot_map_optimized.rs  slot_map_standard.rs  slot_map_unsafe.rs
shared/src/final_ver/: arena_slot_allocator.rs  arena_slot_map.rs  arena_slot_map_2.rs  mod.rs  order_book.rs  order_matcher.rs  orderbook.rs
shared/src/fully_optimized/: arena.rs  mod.rs  orderbook.rs  slot.rs  slot_map.rs  types.rs
shared/src/fully_optimized_old/: arena.rs  mod.rs  orderbook.rs  slot.rs
shared/src/slot_map/: mod.rs  optimized.rs  standard.rs
shared/tests/: arena_slot_allocator_tests.rs  arena_slot_map_tests.rs  arena_tests.rs  final_ob_tests.rs  ob_tests.rs  random.rs  slot_map_tests.rs  tryout.rs
src/: arena_allocator.rs  common.rs  lib.rs
src/channel/: buffer_handle.rs  consumer.rs  mod.rs  producer.rs  ring_buffer.rs  spinlock.rs
src/engine/: arena_order_matcher.rs  mod.rs
src/engine/v1_vec_only/: book.rs  matcher.rs
src/engine/v2_btree/: book.rs  matcher.rs
src/engine/v3_slot_map/: book.rs  matcher.rs
src/engine/v4_slot_map_arena/: book.rs  (+2 more)
src/slot_map/: chunked.rs  mod.rs  optimized.rs  standard.rs
tests/: arena_matcher_tests.rs  arena_slot_allocator_tests.rs  arena_slot_map_tests.rs  final_ob_tests.rs  ob_tests.rs  order_matcher_tests.rs  playground.rs  slot_map_tests.rs  tryout.rs
(+11 files in other folders)
