[package]
name = "order-book"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/Chuck-ie/order-book"
readme = "README.md"

[dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
rand = "0.10.0"
rand_distr = "0.6.0"
mimalloc = "0.1.52"
memmap2 = "0.9.10"
csv = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
charming = "0.6.0"

[profile.release]
debug = true
strip = false
opt-level = 3
codegen-units = 1
lto = true

[[bench]]
name = "bench_naive"
path = "benches/bench_naive.rs"
harness = false
