[package]
name = "benchmarks"
version = "0.1.0"
edition = "2024"

[dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
divan = "0.1.21"
shared = { path = "../shared", default-features = false }
tokio = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
csv = { workspace = true }
serde = { workspace = true }

[[bench]]
name = "benchmarks"
harness = false

[[bin]]
name = "profile_bench"
path = "src/lib.rs"

[[bench]]
name = "divan_benchmarks"
path = "benches/divan_benchmarks.rs"
harness = false
